# frist

./: .gitignore  .pytest_no_cov.ini  CODESTYLE.md  README.md  README_SMALL.md  coverage.json  pyproject.toml  results.xml
docs/: parallel-test.md
pruned_backups/: test_cal.py  test_cal_policy.py
src/frist/: __init__.py  __main__.py  _age.py  _biz.py  _biz_policy.py  _cal.py  _cal_policy.py  _constants.py  _frist.py  _ranges.py  _types.py  _util.py
src/frist.egg-info/: PKG-INFO
src/frist/units/: __init__.py  _base.py  _biz_day.py  _day.py  _fiscal_quarter.py  _fiscal_year.py  _hour.py  _minute.py  _month.py  _quarter.py  _second.py  _week.py  _work_day.py  _year.py
test/: test__age.py  test_age.py  test_age_cal_policy.py  test_age_format.py  test_age_hyp.py  test_age_precise.py  test_age_set_times.py  test_age_working_days_param.py  test_between_single_unit.py  test_biz.py  test_biz_between.py  test_biz_edge_cases.py  test_biz_fiscal.py  test_biz_focused.py  test_biz_half_open.py  test_biz_half_open_july4.py  test_biz_half_open_weekend.py  test_biz_hyp.py  test_biz_policy.py  test_biz_policy_exceptions.py  test_biz_policy_exceptions_full.py  test_biz_policy_full.py  test_biz_policy_post_init.py  test_biz_public_coverage.py  test_biz_shortcut_nexts.py  test_biz_shortcuts.py  test_biz_thru.py  test_biz_unit_namespace_explicit.py  test_biz_unit_namespace_smoke.py  test_biz_weekend_span.py  test_biz_working_days_param.py  test_bizpolicy_edge_cases.py  test_cal.py  test_cal_core.py  test_cal_edge.py  test_cal_fiscal_year.py  test_cal_hyp.py  test_cal_interval_boundaries.py  test_cal_missing_branches.py  test_cal_policy.py  (+35 more)
