[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frist"
version = "0.8.0"
description = "Test Package"
authors = [{name = "Chuck Bass"}]
dependencies = [
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
packages = ["frist"]
package-dir = {"" = "src"}


[tool.setuptools.package-data]
# This is required for typehints to work in your IDE
frist = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true