

[project]
name = "frist"
version = "0.17.0"
description = "Calendar-based time window filtering, age calculations, and business logic for dates and times."
authors = [
    { name = "Chuck Bass", email = "chuck@acrocad.net" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Add runtime dependencies
dependencies = [
    "python-dateutil",
]

# frist has no runtime dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "hypothesis",
    "types-python-dateutil"
]

[project.scripts]
frist = "frist.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=frist --cov-report=term-missing"
markers = [
    "hypothesis: Property-based tests using Hypothesis library",
    "smoke: Quick smoke tests that exercise core API and fast checks",
]

[project.urls]
Homepage = "https://github.com/hucker/frist"
Repository = "https://github.com/hucker/frist"
Issues = "https://github.com/hucker/frist/issues"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313,py314

[testenv]
deps =
    pytest
    pytest-cov
usedevelop = True
commands =
    pytest --cov=frist --cov-report=term-missing
"""

[tool.ruff]
select = ["E", "F", "I", "UP", "Q"]  # Enable these rule categories
fix = true  # Allow auto-fixing
line-length=100

[tool.coverage.run]
omit = [
    "src/frist/__main__.py"
]